# WANDS

wands_benchmark/: .env.example  README.md  pyproject.toml  requirements.txt
wands_benchmark/data/raw/: CANONICAL_WANDS_032834.csv
wands_benchmark/notebooks/: product_feature_analysis.ipynb
wands_benchmark/scripts/: 01_prepare_dataset.py  02_generate_queries.py  03_retrieve_candidates.py  04_rank_candidates.py  05_evaluate.py  create_notebook.py  test_feature_processing.py  utils.py
